# ChangeLog for media-sound/synthv1
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*synthv1-0.5.1 (21 Sep 2014)
  21 SEP 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
  +synthv1-0.5.1.ebuild:
  Version bump.


*synthv1-0.4.1 (15 Apr 2014)

  15 Apr 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -synthv1-0.3.3.ebuild, -synthv1-0.3.4.ebuild, -synthv1-0.3.5.ebuild,
  +synthv1-0.4.1:
  Version bump.
  Removed outdated ebuilds.

*synthv1-0.4.0 (08 Mar 2014)

  08 Mar 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
  +synthv1-0.4.0.ebuild:
  Version bump.

*synthv1-0.3.6 (01 Jan 2014)

  01 Jan 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.3.6.ebuild:
  Version bump.

*synthv1-0.3.5 (30 Sep 2013)

  30 Sep 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.3.5.ebuild:
  Version bump.

*synthv1-0.3.4 (16 Jul 2013)

  16 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -synthv1-0.3.2.ebuild, -synthv1-0.3.2-r1.ebuild, +synthv1-0.3.4.ebuild,
  synthv1-9999.ebuild:
  Removed qt4 fix.
  Version bump.
  Removed old ebuilds.

  07 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-9999.ebuild:
  Make sure configure finds qt.
  Update mime database.

*synthv1-0.3.3 (31 May 2013)

  31 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.3.3.ebuild:
  Version bump.

  05 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-0.3.2-r1.ebuild, synthv1-9999.ebuild:
  Restrict mirror.

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-9999.ebuild:
  Require jack or lv2 to be built.

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  synthv1-0.3.2-r1.ebuild, synthv1-9999.ebuild:
  Remove reduntant DOCS variable.
  Require alsa or jackmidi if jack stand-alone client is built.

*synthv1-0.3.2-r1 (04 May 2013)

  04 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>