@@ -1,11 +1,5 @@
-DIST synthv1-0.3.6.tar.gz 177067 SHA256 3e7b9b8e34c80c095bb481a7f97b763d7715dc78271226b64bce90f2c26c44f6 SHA512 95d65eaed9b4db58a605033f9041bb46d92de7f9a08f07a73586454c6fad7cc4162d5d2647ad4ef3e4271dc3bb50b7f9e0fdded2f5910996f071c9228df1c102 WHIRLPOOL 9eef7f40d75c4c63e2aab165f9d0005867a5dc9bada6b655e6432997a54164fb8e9da62c6013e443d9c8f0107dd7a0da275e58e0b0d7ba878b2937490d3fdeec
-DIST synthv1-0.4.0.tar.gz 180829 SHA256 dbb13d527dbd10b3b602347c286ab3c2a9a1df9bde6bbe7049d991a38392dd7f SHA512 169c0b2d885baf8380245a19126484859c8e22654df88470e7ce90f56f23aa0721888673b27dc5e6c456721c3153c62171e93662fe4028cb54f7cd4c9b773b7e WHIRLPOOL 4b8903c521bfe1ddc0932fdc84946323917771bc1dec22d547ae2f69e6418d1882b7955f694bde4ea30d520d0fc3e029b05c998715fb081cd14e7df142355d59
-DIST synthv1-0.4.1.tar.gz 184701 SHA256 f4a9448463843a004ee8cfe36bf75563fac786aca656ccc71930739a87453dc8 SHA512 e6fb1fa0cc20e65869ba19b2ba1cccc8152d7a0530d5c0eaa17b474319b7175836732645cba7533f984016f0ba2966d62a50ba77bd481b98cc47dfe7d8294324 WHIRLPOOL a5cb5c3864e0768706b1cd9569b3ec3fcc8c1ec1dfa6e64895ebfd729a8fbbb3cabe12bb5acfbd1239fce669e954ff21a9c96106774f462ae968bd1aff3ee556
-DIST synthv1-0.5.1.tar.gz 190201 SHA256 dcdd34d4915539227784be6b9998c93a8c2934db1f42f5bab8185c2e59ee8c9b SHA512 b2fa833ffcaddea2f7a2ec5db9bd1797b05de636c0e979a4c3c1c0dc869ee0417f7d7a70e9d423e176085deb5b0c741124f34fa156449802d7b2bb734c5d1a5c WHIRLPOOL 928b2ffaa25cf8c51d95fd0f9de20a6cd11563ddf6b5832c563c42019a879a33b7c1d88a794a5b51595c3fbdc2581ed175cf4a51c71c3d5eea7ed259092c3404
-EBUILD synthv1-0.3.6.ebuild 1742 SHA256 f68975679f9cbd342c8517b9cfc314d718c8a784f451312112525704843ed3d1 SHA512 e73c2d472d538bf75f525d228cf9e5f4f38d509d8c59d15f5c37c2c00b12df84adaa3fbc4e7b35ba1e7dc4ffcf72a826e21cb9b50889e82514b64c21b33bd45e WHIRLPOOL 76f15985196eee5323b4ce8bde0d1a9f5c77aadfa1b208c82e212b417f922b864837110b89e17ccfde41a3fd573f8578d2c760dfae52fa06718a1b22c642b81f
-EBUILD synthv1-0.4.0.ebuild 1742 SHA256 f68975679f9cbd342c8517b9cfc314d718c8a784f451312112525704843ed3d1 SHA512 e73c2d472d538bf75f525d228cf9e5f4f38d509d8c59d15f5c37c2c00b12df84adaa3fbc4e7b35ba1e7dc4ffcf72a826e21cb9b50889e82514b64c21b33bd45e WHIRLPOOL 76f15985196eee5323b4ce8bde0d1a9f5c77aadfa1b208c82e212b417f922b864837110b89e17ccfde41a3fd573f8578d2c760dfae52fa06718a1b22c642b81f
-EBUILD synthv1-0.4.1.ebuild 1742 SHA256 f68975679f9cbd342c8517b9cfc314d718c8a784f451312112525704843ed3d1 SHA512 e73c2d472d538bf75f525d228cf9e5f4f38d509d8c59d15f5c37c2c00b12df84adaa3fbc4e7b35ba1e7dc4ffcf72a826e21cb9b50889e82514b64c21b33bd45e WHIRLPOOL 76f15985196eee5323b4ce8bde0d1a9f5c77aadfa1b208c82e212b417f922b864837110b89e17ccfde41a3fd573f8578d2c760dfae52fa06718a1b22c642b81f
-EBUILD synthv1-0.5.1.ebuild 1742 SHA256 f68975679f9cbd342c8517b9cfc314d718c8a784f451312112525704843ed3d1 SHA512 e73c2d472d538bf75f525d228cf9e5f4f38d509d8c59d15f5c37c2c00b12df84adaa3fbc4e7b35ba1e7dc4ffcf72a826e21cb9b50889e82514b64c21b33bd45e WHIRLPOOL 76f15985196eee5323b4ce8bde0d1a9f5c77aadfa1b208c82e212b417f922b864837110b89e17ccfde41a3fd573f8578d2c760dfae52fa06718a1b22c642b81f
-EBUILD synthv1-9999.ebuild 1742 SHA256 965d20a813952c694ca1743ec8556ce09a9df54d5e0c65c41dcedf224479fc8a SHA512 9a211e150bc046ed39e52568f8efc873e2ab7436829cb979fbaa9eb5f54aaf1a5f4fbca69bf4341cdbadda2ae11bd9ef5f95a2b78a551a74c6f20ce6595aa862 WHIRLPOOL 92fbe4530c83004c3d85bdbcc59df9e5ca7c3eec6f09f4801b35bf9049df4f01a3e6a099d7c9979fe73dfb39f5e6d506e368daacac014a3f9dd5b69ac58ead58
-MISC ChangeLog 3505 SHA256 b2e2fd76d8a2f644db0fda655622d0ee11176da5e7fefe0cc37bf59f8f885908 SHA512 71f1b522c7d860de6e07674258bbfe320256798b129cd005c4d02052ae13660a560fbb8f66c3946eef73adfe802063cc9c78d6066380024812a0fc19b9121277 WHIRLPOOL d30e7d49a788b4ba81f6e619d05817a3744ca2e1a6460dd7769e50b16ef2c74d70b70f5bb58587a9d0ab224bf4cb50ca4547e327efed40f9cbc18721ed3cb1b0
+DIST synthv1-0.6.1.tar.gz 207622 SHA256 8f6489a8b0eedba60fbdcefc5e55455b18bb5a49bfbf7b6f8f48369688ba3f6d SHA512 cd8c0a00a4e2e7173b00443cd3e7ed412c891a595bc4e673f37ca48b249e6bfd57c62cd53b2d5d8552e9d16fea83edbb484646e36affcf381d4b63eab00e6584 WHIRLPOOL ce05f588f9f3dca889af2b9199ef3bc7cce7c3c3ca979e8cecacc021439a7e43b4f53c3c85b4d6ef622f752c7b6b350aef444a8b8b6fd7f14e842808b4b2e8a4
+EBUILD synthv1-0.6.1.ebuild 1935 SHA256 8a0738ff623736535507b2028603f305e2e54432b08e6a4f7ed17cda559a2e64 SHA512 f0d1f1acdb7b5285f72faef26fd3ac56acd4906cdfe634101c273843ecaff1a6ca304cbb3a16c6f43364073dca723f684d05902190b93bd8d3bab5ff051af2d2 WHIRLPOOL e8359567c279d6b09b012c46c2856fe5d37f4508c3c79ccc29fdd3b466fc319a33844f02ca2158c4b0daad975cc901e61de226e939823e8a0468fa17e3b3d36d
+EBUILD synthv1-9999.ebuild 1935 SHA256 8a0738ff623736535507b2028603f305e2e54432b08e6a4f7ed17cda559a2e64 SHA512 f0d1f1acdb7b5285f72faef26fd3ac56acd4906cdfe634101c273843ecaff1a6ca304cbb3a16c6f43364073dca723f684d05902190b93bd8d3bab5ff051af2d2 WHIRLPOOL e8359567c279d6b09b012c46c2856fe5d37f4508c3c79ccc29fdd3b466fc319a33844f02ca2158c4b0daad975cc901e61de226e939823e8a0468fa17e3b3d36d
+MISC ChangeLog 3810 SHA256 f89f0341c34d3ce88827f5c574de47be4f93c2b8973174e0ef440ba4e92288c4 SHA512 96100339b377b7706414596999bc154a578b0817144144cf05d397c4c9f482b4c18246645682f4fd08eb5b363a6016774ab0bfb62abdb046c7caca33f9126b5e WHIRLPOOL 2f72230b68a6742ba0f1ebb6a6f1d799cfad16b24d0ce536d72e951ac2cd3f435d56d5a2bb2e2cb5efb80fe4cce96b4c7dedf3c4401baeedb942e17488f3219f
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
