@@ -1,21 +1,22 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI="5"
 
-[[ "${PV}" = "9999" ]] && inherit subversion
-
-[[ "${PV}" = "9999" ]] && AUTOTOOLS_AUTORECONF="1"
+if [[ "${PV}" = "9999" ]]; then
+	inherit git-r3
+	AUTOTOOLS_AUTORECONF="1"
+fi
 inherit base fdo-mime qt4-r2 autotools-utils
 
-DESCRIPTION="An old-school all-digital 4-oscillator subtractive polyphonic synthesizer with stereo fx."
+DESCRIPTION="An old-school all-digital 4-oscillator subtractive polyphonic synthesizer with stereo fx"
 HOMEPAGE="http://synthv1.sourceforge.net/"
 
 RESTRICT="mirror"
 
 if [[ "${PV}" = "9999" ]]; then
-	ESVN_REPO_URI="http://svn.code.sf.net/p/${PN}/code/trunk"
+	EGIT_REPO_URI="git://git.code.sf.net/p/${PN}/code"
 	SRC_URI=""
 	KEYWORDS=""
 else
@@ -23,7 +24,7 @@ else
 	KEYWORDS="~amd64 ~ppc ~x86"
 fi
 
-IUSE="alsa debug jack jackmidi jacksession lv2 nsm osc"
+IUSE="alsa debug jack jackmidi jacksession lv2 nsm osc qt5"
 REQUIRED_USE="
 	|| ( jack lv2 )
 	jack? ( || ( alsa jackmidi ) )
@@ -33,24 +34,44 @@ REQUIRED_USE="
 LICENSE="GPL-2"
 SLOT="0"
 
-RDEPEND="dev-qt/qtcore
-	dev-qt/qtgui
+RDEPEND="
 	alsa? ( media-libs/alsa-lib )
 	jack? ( media-sound/jack-audio-connection-kit )
 	lv2? ( media-libs/lv2 )
-	osc? ( media-libs/liblo )"
+	osc? ( media-libs/liblo )
+	!qt5? (
+		dev-qt/qtcore:4
+		dev-qt/qtgui:4
+	)
+	qt5? (
+		dev-qt/qtcore:5
+		dev-qt/qtgui:5
+		dev-qt/qtwidgets:5
+		dev-qt/qtxml:5
+	)"
 DEPEND="${RDEPEND}"
 
 AUTOTOOLS_IN_SOURCE_BUILD="1"
 
 src_unpack() {
-	[[ "${PV}" = "9999" ]] && subversion_src_unpack
-	[[ "${PV}" = "9999" ]] || base_src_unpack
+	if [[ "${PV}" = "9999" ]]; then
+		git-r3_src_unpack
+	else
+		base_src_unpack
+	fi
+}
+
+myqmake() {
+	if ! use qt5; then
+		eqmake4 "${@}"
+	else
+		eqmake5 "${@}"
+	fi
 }
 
 src_configure() {
-	use jack && eqmake4 "${PN}_jack.pro" -o "${PN}_jack.mak"
-	use lv2 && eqmake4 "${PN}_lv2.pro" -o "${PN}_lv2.mak"
+	use jack && myqmake "${PN}_jack.pro" -o "${PN}_jack.mak"
+	use lv2 && myqmake "${PN}_lv2.pro" -o "${PN}_lv2.mak"
 
 	local myeconfargs=(
 		$(use_enable alsa alsa-midi)
@@ -61,6 +82,8 @@ src_configure() {
 		$(use_enable lv2)
 		$(use_enable osc liblo)
 		$(use_enable nsm)
+		$(use_enable !qt5 qt4)
+		$(use_enable qt5)
 	)
 
 	autotools-utils_src_configure
