@@ -1,6 +1,16 @@
 # ChangeLog for media-sound/synthv1
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*synthv1-0.6.1 (26 Mar 2015)
+
+  26 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -synthv1-0.3.6.ebuild, -synthv1-0.4.0.ebuild, -synthv1-0.4.1.ebuild,
+  -synthv1-0.5.1.ebuild, +synthv1-0.6.1.ebuild, synthv1-9999.ebuild:
+  version bump
+  remove old
+  move to git upstream
+  add qt5 support
 
 *synthv1-0.5.1 (21 Sep 2014)
   21 SEP 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
